--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,7 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
 
-    "baseUrl": ".",
-    "paths": {
-      "src/*": ["/src/*"]
-    }
+    "baseUrl": "src",
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
